fixed grid and spacing, issues aligning icons

--- a/main/style.css
+++ b/main/style.css
@@ -2,19 +2,36 @@ li {
     list-style-type: none;
     display: none;
 }
-
+/* OVERALL GRID */
 body {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 3fr 1fr;
+    height: fit-content;
+    margin-left: 10%;
+    margin-right: 10%;
+    background-color: #C1C8E4;
+    color: rgb(71, 71, 71);
+    font-family: 'Oswald', sans-serif;
+    line-height: 2;
 }
+
+p {
+    text-align: center;
+}
+/* HEADER CONTENT  */
 
 header {
     grid-row: 1 / 2;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 4fr 1fr;
-    background-color: #e2f1f3;
+    grid-template-rows: 1fr 3fr 1fr;
+}
+/* nav {
+    grid-row: 1 / 2;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
 
 #astro {
@@ -22,13 +39,9 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 
-nav {
-    grid-row: 1 / 2;
-    display: flex;
-    justify-content: flex-end;
-}
+
 
 .starter-visuals {
     grid-row: 2 / 3;
@@ -40,8 +53,9 @@ nav {
 #hopeful-animation {
     position: relative;
     z-index: 1;
-    height: 50%;
+    height: 100%;
     width: 100%;
+    border-radius: 20px;
 }
 
 #sammy {
@@ -55,20 +69,34 @@ nav {
     grid-row: 3 / 4;
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
+
+/* MAIN SECTION CONTENT */
 
 main {
     grid-row: 2 / 3;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+h1 {
+    font-size: large;
+    padding: 10px;
+    text-decoration: underline;
+    font-weight: bold;
 }
 
 .about-me {
-    grid-row: 1/2;
+    grid-row: 1 / 2;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .skills {
@@ -76,10 +104,12 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .logo-icons {
     height: 30px;
+    text-align: center;
 }
 
 .projects {
@@ -87,6 +117,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .contact-me {
@@ -94,6 +125,10 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+input, textarea {
+    margin: 5px;
 }
 
 footer {
@@ -101,4 +136,8 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: small;
+    display: flex;
+    flex-direction: column;
 }
+
